upd: updated cors config